--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -30,7 +30,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   font-family: $font-family;
   font-size: 20px;
   background: $white;
